--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./public/less/main.css">
 </head>
-<body>
+<body ng-app="yike">
 	<div class="viewport">
 		<!-- 侧边导航 -->
-		<div class="navs">
+		<div class="navs" ng-class="{collapse:left}">
 			<dl>
 				<dt class="login">
 					<div class="avatar">
@@ -56,14 +56,14 @@
 		</div>
 		<div class="container">
 			<!-- 头部 -->
-			<div class="header">
-				<a href="javascript:;" class="menu icon-menu"></a>
+			<div class="header" ng-class="{collapse:left}">
+				<a href="javascript:;" class="menu icon-menu" ng-click="toggle();"></a>
 				<h2>今日一刻</h2>
 				<a href="javascript:;" class="search icon-search"></a>
 			</div>
 			<!-- 主体 -->
 			<div class="body">
-				<div class="item">
+				<div class="item" ng-class="{collapse:left}">
 					<!-- 日期分类 -->
 					<div class="mark">13Aug</div>
 					<ul class="posts large">
@@ -155,5 +155,10 @@
 		</div>
 	</div>
 	<!-- <script src="./public/libs/toggle.js"></script> -->
+	
 </body>
+	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="scripts/app.js">
+			
+</script>
 </html>
